--- a/index.html
+++ b/index.html
@@ -1,18 +1,44 @@
+<div class="css-3d-text">MOOD.ml</div>
 <style>
-.rainbow-text {
-	font-family: Arial;
-	font-weight: bold;
-	font-size: 50px;
-	text-shadow: #A3A3A3 1px 1px 1px;
-}
-.rainbow-text .block-line > span {
-	display: inline-block;
-}
+ .css-3d-text {
+    font-size: 300px;
+    color: #08e9f5;
+    font-family: Tahoma, Geneva, sans-serif;
+    text-shadow: 0px 0px 0 rgb(4,229,241),
+                 1px -1px 0 rgb(1,226,238),
+                 2px -2px 0 rgb(-3,222,234),
+                 3px -3px 0 rgb(-6,219,231),
+                 4px -4px 0 rgb(-10,215,227),
+                 5px -5px 0 rgb(-13,212,224),
+                 6px -6px 0 rgb(-17,208,220),
+                 7px -7px 0 rgb(-21,204,216),
+                 8px -8px 0 rgb(-24,201,213),
+                 9px -9px 0 rgb(-28,197,209),
+                 10px -10px 0 rgb(-31,194,206),
+                 11px -11px 0 rgb(-35,190,202),
+                 12px -12px 0 rgb(-39,186,198),
+                 13px -13px 0 rgb(-42,183,195),
+                 14px -14px 0 rgb(-46,179,191),
+                 15px -15px 0 rgb(-49,176,188),
+                 16px -16px 0 rgb(-53,172,184),
+                 17px -17px 0 rgb(-56,169,181),
+                 18px -18px 0 rgb(-60,165,177),
+                 19px -19px 0 rgb(-64,161,173),
+                 20px -20px 0 rgb(-67,158,170),
+                 21px -21px 0 rgb(-71,154,166),
+                 22px -22px 0 rgb(-74,151,163),
+                 23px -23px 0 rgb(-78,147,159),
+                 24px -24px 0 rgb(-82,143,155),
+                 25px -25px 0 rgb(-85,140,152),
+                 26px -26px 0 rgb(-89,136,148),
+                 27px -27px 0 rgb(-92,133,145),
+                 28px -28px 0 rgb(-96,129,141),
+                 29px -29px 0 rgb(-99,126,138),
+                 30px -30px 0 rgb(-103,122,134),
+                 31px -31px  0 rgb(-107,118,130),
+                 32px -32px 31px rgba(31,83,97,0.91),
+                 32px -32px 1px rgba(31,83,97,0.5),
+                 0px 0px 31px rgba(31,83,97,.2);
+ }
 
 </style>
-
-<div class="rainbow-text" style="text-align: center;">
-	<div class="rainbow-text" style="text-align: center;">
-	<span class="block-line"><span><span style="color:#ff0000;">H</span><span style="color:#ff3c00;">T</span><span style="color:#ff7300;">M</span><span style="color:#ffaa00;">L&nbsp;</span></span><span><span style="color:#ffe500;">C</span><span style="color:#e1ff00;">S</span><span style="color:#aaff00;">S&nbsp;</span></span><span><span style="color:#6eff00;">R</span><span style="color:#37ff00;">a</span><span style="color:#00ff00;">i</span><span style="color:#00ff3c;">n</span><span style="color:#00ff73;">b</span><span style="color:#00ffaa;">o</span><span style="color:#00ffe6;">w&nbsp;</span></span><span><span style="color:#00e1ff;">T</span><span style="color:#00a6ff;">e</span><span style="color:#006eff;">x</span><span style="color:#0037ff;">t&nbsp;</span></span><span><span style="color:#0400ff;">G</span><span style="color:#3c00ff;">e</span><span style="color:#7300ff;">n</span><span style="color:#ae00ff;">e</span><span style="color:#e500ff;">r</span><span style="color:#ff00e1;">a</span><span style="color:#ff00aa;">t</span><span style="color:#ff006e;">o</span><span style="color:#ff0037;">r</span></span></span>
-</div>
-</div>
