--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="content-Type" content="text/html; utf-8" />
+<meta http-equiv="Pragma" content="cache" />
+<meta name="robots" content="INDEX,FOLLOW" />
+<meta http-equiv="content-Language" content="de" />
+<meta name="description" content="" />
+<meta name="keywords" content="mood,technology,science,seo,web,design" />
+<meta name="author" content="mood.ml" />
+<meta name="publisher" content="mood.ml" />
+<meta name="copyright" content="mood.ml" />
+<meta name="audience" content="Profis" />
+<meta name="page-type" content="Private Homepage" />
+<meta name="page-topic" content="Bauen Wohnen" />
+<meta http-equiv="Reply-to" content="" />
+<meta name="expires" content="" />
+<meta name="revisit-after" content="2 days" />
+<title>mood.ml</title>
     <link rel="icon" href="https://glitch.com/favicon.ico" />
 
     <title>MOOD.ml</title>
