--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta name="expires" content="" />
 <meta name="revisit-after" content="2 days" />
 <title>mood.ml</title>
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
+    <link rel="icon" href="/favm.png" />
 
     <title>MOOD.ml</title>
 
