--- a/index.html
+++ b/index.html
@@ -32,6 +32,39 @@
   </head>
   <body>
     <div class="css-3d-text">MOOD.ml</div>
-    
+    <table width="100%" border="0">
+      <tr>
+        <td width="50%">
+          <div class="box-shadow">
+            <img
+              src="https://cdn.glitch.me/6e53b007-115e-4136-adfa-9bd5903e02cd%2FE7E2089D-32DB-41FA-9181-606BC84EEBB2.png?v=1637784326342"
+              width="100%"
+            />
+          </div>
+        </td>
+        <td width="50%">
+          <div class="box-shadow">
+            <h1>
+              Welcome to Mood.ml
+            </h1>
+            <h5>
+              We have "Gold" Standards...
+            </h5>
+            <p>
+              Do you want to get featured for free on this site? Just send me an
+              E-Mail.
+            </p>
+
+            <div id="animation-demo" class="animated bounce">
+              <a class="css-button" href="mailto:kai.ortlieb@gmx.de">
+                E-Mail Me!
+              </a>
+            </div>
+            <spacer type="vertical" size="30"> </spacer>
+            <p></p>
+          </div>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
