--- a/index.html
+++ b/index.html
@@ -67,4 +67,5 @@
       </tr>
     </table>
   </body>
+  <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "aadf9bbd673e4a7d96da554b2b40c0f6"}'></script><!-- End Cloudflare Web Analytics -->
 </html>
