Update and rename web/index.html to index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <title>MOOD.ml</title>
 
     <!-- Import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/web/style.css" />
 
     <!-- Import the webpage's javascript file -->
     <script src="/script.js" defer></script>
