--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </p>
 
             <div id="animation-demo" class="animated bounce">
-              <a class="css-button" href="mailto:kai.ortlieb@gmx.de">
+              <a class="css-button" href="mailto:smartboy@science.cf">
                 E-Mail Me!
               </a>
             </div>
